fixed and tested python support, compilation fixes

--- a/src/classes/Makefile
+++ b/src/classes/Makefile
@@ -5,7 +5,8 @@ include ../../makeopts
 
 CWD = classes
 SRC = MObject.cpp MApplication.cpp PathFinder.cpp Profile.cpp \
-      XFace.cpp kbList.cpp MFolder.cpp MEvent.cpp MailCollector.cpp
+      XFace.cpp kbList.cpp MFolder.cpp MEvent.cpp MailCollector.cpp \
+      MModule.cpp
 
 HDR = $(SRC:.cpp=.h)
 DEP = $(SRC:.cpp=.d)
@@ -13,7 +14,7 @@ DEP = $(SRC:.cpp=.d)
 TARGETS = $(SRC:.cpp=.o)
 
 ifdef EXPERIMENTAL
-TARGETS += Filters.o MModule.o
+TARGETS += Filters.o
 endif
 
 all: $(TARGETS)
