importing XFMail address books seems to work

--- a/src/adb/Makefile
+++ b/src/adb/Makefile
@@ -2,7 +2,8 @@
 
 CWD = adb
 SRC = AdbFrame.cpp AdbManager.cpp AdbProvider.cpp AdbEntry.cpp \
-      ProvFC.cpp ProvBbdb.cpp ImportText.cpp AdbImport.cpp
+      ProvFC.cpp ProvBbdb.cpp AdbImport.cpp \
+      ImportText.cpp ImportXFMail.cpp
 
 ifdef DEBUG
 SRC += ProvDummy.cpp
