--- a/src/adb/Makefile
+++ b/src/adb/Makefile
@@ -3,7 +3,7 @@
 CWD = adb
 SRC = AdbFrame.cpp AdbManager.cpp AdbProvider.cpp AdbEntry.cpp \
       ProvFC.cpp ProvBbdb.cpp AdbImport.cpp \
-      ImportText.cpp ImportXFMail.cpp
+      ImportText.cpp ImportXFMail.cpp ImportMailrc.cpp ImportPine.cpp
 
 ifdef DEBUG
 SRC += ProvDummy.cpp
