1. removed autogenerated files (I have conflicts in them all the time, painful) 2. Profile::DeleteGroup() respects the profile path (I wonder how many other    methods don't respect it neither) 3. wxPTextEntry now has chances to actually work 4. new GUI for ADB import - a bit better, but needs testing 5. some more new (ugly) icons 6. new dialog for configuring custom headers, "Configure headers" dialog    modified to invoke it for "advanced" users

--- a/src/adb/Makefile
+++ b/src/adb/Makefile
@@ -2,6 +2,7 @@
 
 CWD = adb
 SRC = AdbFrame.cpp AdbManager.cpp AdbProvider.cpp AdbEntry.cpp \
+      AdbDialogs.cpp \
       ProvFC.cpp ProvBbdb.cpp AdbImport.cpp \
       ImportText.cpp ImportXFMail.cpp ImportMailrc.cpp ImportPine.cpp
 
