more files in .cvsignore

--- a/.cvsignore
+++ b/.cvsignore
@@ -6,6 +6,7 @@ linux-gnu.system.cache
 linux-gnu.system.cache.tmp
 linux.system.cache
 linux.system.cache.tmp
+Linux.system.cache
 Linux.system.cache.tmp
 makeopts
 makeopts.in.Solaris
