1. bug which sometimes disabled exit confirmation dialog (making it impossible    to quit M) fixed 2. option dialog pages now use their own size (and not the max size of all    pages) to decide whether to show scrollbar or not - looks much better. 3. more work on message templates (not finished yet, the only change is that    message forwarding is, temporarily, broken)

--- a/src/gui/Makefile
+++ b/src/gui/Makefile
@@ -5,7 +5,7 @@ SRC = wxMApp.cpp wxMFrame.cpp wxFolderView.cpp wxMessageView.cpp \
 wxComposeView.cpp wxMainFrame.cpp wxIconManager.cpp wxFontManager.cpp wxMDialogs.cpp  \
 wxlwindow.cpp wxllist.cpp wxlparser.cpp wxMenuDefs.cpp wxOptionsDlg.cpp \
 wxFolderTree.cpp wxDialogLayout.cpp wxMFolderDialogs.cpp wxBrowseButton.cpp \
-wxHeadersDialogs.cpp
+wxHeadersDialogs.cpp wxTemplateDialog.cpp
 
 ifdef USE_WXTAB
 SRC += wxtab.cpp
