--- a/src/gui/Makefile
+++ b/src/gui/Makefile
@@ -5,7 +5,7 @@ SRC = wxMApp.cpp wxMFrame.cpp wxFolderView.cpp wxMessageView.cpp \
 wxComposeView.cpp wxMainFrame.cpp wxIconManager.cpp wxMDialogs.cpp  \
 wxlwindow.cpp wxllist.cpp wxlparser.cpp wxMenuDefs.cpp wxOptionsDlg.cpp \
 wxFolderTree.cpp wxDialogLayout.cpp wxMFolderDialogs.cpp wxBrowseButton.cpp \
-wxHeadersDialogs.cpp wxTemplateDialog.cpp
+wxHeadersDialogs.cpp wxTemplateDialog.cpp wxModulesDlg.cpp
 
 ifdef USE_WXTAB
 SRC += wxtab.cpp
