Fixed MModule linkage.

--- a/src/modules/Makefile
+++ b/src/modules/Makefile
@@ -56,8 +56,10 @@ clean:
 	$(RM) *.o *.so *.lo
 
 install:
+ifeq ($(USE_MODULES),dynamic)
 	$(INSTALL) -d $(MODULEDIR)
 	for i in $(TARGETS); do $(INSTALL_PROGRAM) $$i $(MODULEDIR); done
+endif
 
 .PHONY: clean
 
