Fixed one timer bug in date format, wxEnhancedPanel layout call added, double click to open for folderview

--- a/src/Makefile
+++ b/src/Makefile
@@ -75,6 +75,7 @@ install: M
 	ln -f -s ../share/Mahogany/$(CANONICAL_HOST)/bin/M $(BINDIR)
 	$(RM) $(BINDIR)/mahogany
 	ln -f -s ../share/Mahogany/$(CANONICAL_HOST)/bin/M $(BINDIR)/mahogany
+	$(MAKE) -C modules $@
 	$(INSTALL) -d $(DATADIR)/icons
 	for i in icons/*.xpm ; do $(INSTALL_DATA) $$i $(DATADIR)/icons; done
 	$(INSTALL) -d $(DATADIR)/icons/GNOME
