--- a/include/config.h.in
+++ b/include/config.h.in
@@ -9,11 +9,15 @@
 /// @author Karsten Ballüder (Ballueder@usa.net)
 /**@name config.h.in: Defines generated automatically from configure.in by autoheader.  */
 //@{
+#ifndef __cplusplus
+
 /** Define to empty if the keyword does not work.  */
 #undef const
 
 /** Define as __inline if that's what the C compiler calls it.  */
 #undef inline
+
+#endif /* !C++ */
 
 /** Define if your C compiler doesn't accept -c and -o together.  */
 #undef NO_MINUS_C_MINUS_O
