ps2pdf test added to configure

--- a/makeopts.in
+++ b/makeopts.in
@@ -47,6 +47,7 @@ LATEX2HTML=@LATEX2HTML@ -local_icons
 XGETTEXT=@XGETTEXT@
 MSGFMT=@MSGFMT@
 PERL=@PERL@
+PSTOPDF=@PSTOPDF@
 
 # compiler stuff
 CC = @CC@
