--- a/configure.in
+++ b/configure.in
@@ -622,6 +622,11 @@ AC_PATH_PROG(LATEX,latex)
 AC_PATH_PROG(MAKEINDEX,makeindex)
 AC_PATH_PROG(DVIPS,dvips)
 AC_PATH_PROG(PSTOPDF,ps2pdf)
+if test "x$PSTOPDF" = x
+then
+	PSTOPDF="echo \"ps2pdf not available.\""
+	AC_SUBST(PSTOPDF)
+fi
 if test "x$LATEX" = x -o "x$DVIPS" = x -o "x$MAKEINDEX" = x
 then
 	LATEX="echo \"No latex available.\""
