--- a/configure.in
+++ b/configure.in
@@ -30,6 +30,7 @@ M_OVERRIDES_PREPARE
 DEFAULT_USE_EFENCE=0
 DEFAULT_USE_DMALLOC=0
 DEFAULT_USE_DEBUG=0
+DEFAULT_USE_OPT=1
 DEFAULT_USE_DEBUG_FLAG=0
 DEFAULT_USE_WXDEBUG=0
 DEFAULT_USE_PYTHON=1
@@ -66,6 +67,10 @@ USE_EFENCE)
 M_OVERRIDES(debug,debug,
 --with-debug    use debug code,
 USE_DEBUG)
+
+M_OVERRIDES(opt,opt,
+--with-opt    use compiler optimisations,
+USE_OPT)
 
 M_OVERRIDES(debuginfo, debuginfo,
 --with-debuginfo    use debug info from compiler,
@@ -341,6 +346,10 @@ if test "$USE_DEBUG_FLAG" = 1; then
 	fi
 fi
 
+if test "$USE_OPT" != 1; then
+	DBFLAGS="$DBGFLAGS -O0"
+fi
+
 dnl experimental code (unstable!)
 MAKE_EXPERIMENTAL=
 if test "$USE_EXPERIMENTAL" = 1; then
@@ -374,9 +383,9 @@ dnl really need this.
 AC_CHECK_LIB(shadow,main)
 
 dnl Check if we have the pi-sock library and headers for PalmOS support.
-
-AC_CHECK_HEADERS(pi-source.h, AC_CHECK_LIB(pisock,pi_file_open),
+AC_CHECK_HEADERS(pi-source.h, ,
   AC_MSG_WARN("Cannot find pisock library support for PalmOS disabled."))
+
 
 dnl --------------------------------------------------------------------------
 dnl check for python ( a bit lengthy thanks to its stupid installation)
@@ -662,7 +671,6 @@ then
 fi
 AC_SUBST(MAKE_HAVE_LATEX2HTML)
 AC_SUBST(LATEX2HTML)
-
 
 dnl --------------------------------------------------------------------------
 dnl final settings, concatenation of args, etc
