1. ShowCustomOptionsDialog() added 2. tried to use profiles suspend mode for Ok/Apply/Cancel logic - doesn't work    yet

--- a/res/M.rc
+++ b/res/M.rc
@@ -114,6 +114,7 @@ folder_group		BITMAP "folder_group.bmp"
 folder_newmail		BITMAP "folder_newmail.bmp"
 folder_sentmail		BITMAP "folder_sentmail.bmp"
 folder_palmpilot	BITMAP "folder_palmpilot.bmp"
+folder_trash		BITMAP "folder_trash.bmp"
 
 // Custom headers dialog image list (16x16)
 image_news	BITMAP	"image_news.bmp"
