--- a/src/Makefile
+++ b/src/Makefile
@@ -4,7 +4,7 @@
 
 CWD = src
 UTILOBJ:=util/strutil.o util/sysutil.o util/miscutil.o util/upgrade.o
-SUB_DIRS = util classes gui mail adb wx modules
+SUB_DIRS =  modules util classes gui mail adb wx
 MOBJS:=$(UTILOBJ) classes/*.o gui/*.o  mail/*.o adb/*.o \
       wx/generic/*.o wx/common/*.o
 
