--- a/configure.in
+++ b/configure.in
@@ -194,8 +194,8 @@ then
 
 	dnl now check for exception disabling
 	AC_MSG_CHECKING(for gcc with 2.8 style options)
-	CFLAGS="$CFLAGS -DCC_GCC -Wall -pedantic "
-	CXXFLAGS="$CXXFLAGS -DCC_GCC -Wall -pedantic "
+	CFLAGS="$CFLAGS -DCC_GCC -Wall "
+	CXXFLAGS="$CXXFLAGS -DCC_GCC -Wall "
 	newgcc=
 	dnl is it gcc 2.8 or newer?
 	$CXX -v 2>&1 | $GREP 2.8 >/dev/null
