--- a/makeopts.in
+++ b/makeopts.in
@@ -105,6 +105,8 @@ DEF = -DM_PREFIX="\"$(PREFIX)/\"" -DM_CANONICAL_HOST="\"$(CANONICAL_HOST)\""
 INC = -I$(BUILDDIR)/include -I$(BUILDDIR)/extra/include -I$(BUILDDIR)/include/gui -I$(CCLIENTINCLUDE) 
 CFLAGS   = @CFLAGS@  $(CPPFLAGS) $(DEF) $(INC)
 CXXFLAGS = @CXXFLAGS@ $(CPPFLAGS) $(DEF) $(INC)
+# for the python code:
+CXXFLAGS_PYCODE = @CXXFLAGS_PYCODE@ $(CPPFLAGS) $(DEF) $(INC)
 LDFLAGS = @LDFLAGS@
 
 LIBS=@LIBS@ $(CCLIENTLIB) $(MODULES_LIBS)
