static linkage fixed

--- a/makeopts.in
+++ b/makeopts.in
@@ -110,6 +110,6 @@ CXXFLAGS_PYCODE = @CXXFLAGS_PYCODE@ $(CPPFLAGS) $(DEF) $(INC)
 LDFLAGS = @LDFLAGS@
 
 LIBS=@LIBS@ $(CCLIENTLIB) $(MODULES_LIBS)
-LIBS_STATIC=@LIBS_STATIC@ $(CCLIENTLIB)
+LIBS_STATIC=@LIBS_STATIC@ $(CCLIENTLIB) $(MODULES_LIBS)
 GUI_LIBS=@GTK_LDFLAGS@
 GUI_LIBS_STATIC=@GUI_LIBS_STATIC@
